--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,12 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<a href="/movies"><button>Check the movies</button></a>
+<html>
+  <head>
+    <title>Cinema Ironhack</title>
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="title">Cinema <br />Ironhack</h1>
+      <a href="/movies" class="button">Check the movies!</a>
+    </div>
+  </body>
+</html>
